Tue Nov  8 18:58:36 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * bin/ChangeLogEditor/FileLocatorFactory.pm:

          Implemented a utility function that searches the parent
          directory for the specified directory. This is necessary
          because the SVN 1.7.x client does not store .svn directories
          in the child directory anymore. Instead, the root directory
          of the checkout contains the .svn directory. Now, the SVN
          locator will search all parent directories to determine if
          it the SCM is a SVN sandbox.

        * bin/PerlACE/Process_Win32.pm:

          Updated the Executable() subroutine such that if the full
          or relative path of the executable is not specified, then
          it will try to resolve the location of the executable using
          the PATH.

Sat Oct 22 02:06:37 UTC 2011  Abdullah Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_common.GNU:

          Added missing:
          DCCFLAGS += -g

          From the file. Thanks to William R. Otte  <wotte@dre.vanderbilt.edu>
          for pointing this out.

Fri Oct 21 23:35:30 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/Time_Value.inl:

          Changed the operator comparing __builtin_constant_p to be a
          bitwise (&) instead oflogical and (&&) to address a warning from the
          LLVM compiler.  In this case, the result of the two operators is
          logically equivalent.  Thanks to Abdullah Sowayan <sowayan@gmail.com>
          for reporting the issue.

Fri Oct 21 11:26:49 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * examples/Misc/test_trace.cpp:
          Fixed compile issue in case all logging is turned off.

Thu Oct 20 10:41:44 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Added links to the OBS projects, thanks to John Fletcher for providing
          this update
