@@ -1,3 +1,10 @@
+Wed Nov  9 23:30:30 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * bin/ChangeLogEditor/FileLocatorFactory.pm:
+        * bin/PerlACE/Process_Win32.pm:
+
+          Fixed fuzz errors related to trailing whitespaces.
+
 Tue Nov  8 18:58:36 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * bin/ChangeLogEditor/FileLocatorFactory.pm:
